--- a/01_dockerfiles/ex02/Dockerfile
+++ b/01_dockerfiles/ex02/Dockerfile
@@ -1,4 +1,11 @@
-FROM 820365efc5ee
+FROM ruby
 
-EXPOSE 3000
-CMD ["rails", "s", "-b", "0.0.0.0", "-p", "3000"]
+ONBUILD COPY yoo /opt/app/
+ONBUILD WORKDIR /opt/app
+
+RUN apt-get update -y && apt-get install -y build-essential libpq-dev nodejs sqlite3 gem
+
+ONBUILD EXPOSE 3000
+ONBUILD RUN bundle install
+ONBUILD RUN rake _12.3.1_ db:migrate
+ONBUILD RUN rake _12.3.1_ db:seed
